drone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: drone
  name: drone
  labels:
    helm.sh/chart: drone-0.1.7
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
    app.kubernetes.io/component: server
    app.kubernetes.io/version: "1.9.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    konghq.com/https-redirect-status-code: "301"
    konghq.com/protocols: https
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - "drone.example.com"
      secretName: drone.example.com.ssl
  rules:
    - host: "drone.example.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: drone
              port:
                number: 80
